src/frameworks/enterprise/main/objects/HistoryTracking__mdt/HistoryTracking__mdt.object-meta.xml
<CustomObject>
    <description>Container for custom history tracking config allowing the HistoryTracking framework to update fields accordingly</description>
    <label>History Tracking</label>
    <pluralLabel>History Tracking</pluralLabel>
</CustomObject>