src/frameworks/enterprise/main/objects/HistoryTracking__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch whether this record is set to active or not.</description>
    <inlineHelpText>Switch whether this record is set to active or not. Unticked records will be bypassed by the Histrory Tracking Framework</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>