src/frameworks/enterprise/main/objects/HistoryTracking__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>The Object Api Name being tracked for changes and field updates</description>
    <inlineHelpText>The Object Api Name being tracked for changes and field updates</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>