src/frameworks/enterprise/main/objects/HistoryTracking__mdt/fields/OverwriteExistingValue__c.field-meta.xml
<CustomField>
    <fullName>OverwriteExistingValue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not to overwrite the Target Field when already populated upon matching</description>
    <inlineHelpText>Whether or not to overwrite the Target Field when already populated upon matching. Untick this box if the original populated value requires to remain unchanged upon sequential matching</inlineHelpText>
    <label>Overwrite Existing Value</label>
    <type>Checkbox</type>
</CustomField>