src/frameworks/enterprise/main/objects/HistoryTracking__mdt/fields/TargetField__c.field-meta.xml
<CustomField>
    <fullName>TargetField__c</fullName>
    <description>The Target Field Name which will be populated with the configured Target Value upon matching</description>
    <inlineHelpText>The Target Field Name which will be populated with the configured Target Value upon matching</inlineHelpText>
    <label>Target Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>