src/frameworks/enterprise/main/objects/HistoryTracking__mdt/fields/TargetValue__c.field-meta.xml
<CustomField>
    <fullName>TargetValue__c</fullName>
    <description>The Target Value that gets populated within the Target Field upon matching</description>
    <inlineHelpText>The Target Value that gets populated within the Target Field upon matching. Provide a hard-coded value or use merge values like &quot;{TODAY}&quot;, &quot;{NOW}&quot;, &quot;{TRUE}&quot;, &quot;{FALSE}&quot;, &quot;{NULL}&quot;, or merge names for fields: &quot;{Opportunity.AccountId} - {Opportunity.StageName}&quot;. Provided without quotes</inlineHelpText>
    <label>Target Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>