src/frameworks/enterprise/main/objects/HistoryTracking__mdt/fields/TrackedFieldName__c.field-meta.xml
<CustomField>
    <fullName>TrackedFieldName__c</fullName>
    <description>The field that gets observed for changes in order to perform field updates</description>
    <inlineHelpText>The field that gets observed for changes in order to perform field updates</inlineHelpText>
    <label>Tracked Field Name</label>
	<length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>