src/frameworks/enterprise/main/objects/HistoryTracking__mdt/listViews/All_History_Tracking.listView-meta.xml
<ListView>
    <fullName>All_History_Tracking</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>MatchingValue__c</columns>
    <columns>TargetValue__c</columns>
    <columns>TrackedFieldName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All History Tracking</label>
    <language>en_US</language>
</ListView>